--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,6 +4,8 @@ backend:
   name: github
   repo: WineBarProstejov/content
   branch: main
+  auth_scope: repo
+  base_url: https://api.netlify.com 
   
 media_folder: "public/uploads"
 public_folder: "public/uploads"
