--- a/prod/config.yml
+++ b/prod/config.yml
@@ -1,10 +1,18 @@
-local_backend: true
+# local_backend: true
 backend:
-  name: git-gateway
-
+  # name: git-gateway
+  name: github
+  repo: WineBarProstejov/content
+  branch: main
+  auth_scope: repo
+  base_url: https://api.netlify.com 
   
 media_folder: "public/uploads"
 public_folder: "public/uploads"
+
+logo:
+  src: "/public/uploads/logo-no.webp"
+  show_in_header: true
 
 collections:
   - name: "about"
@@ -135,7 +143,6 @@ collections:
                 fields:
                   - { label: "Od", name: "od", widget: "string" }
                   - { label: "Do", name: "do", widget: "string" }
-
 
   - name: "menu"
     label: "Menu"
