--- a/admin/config.yml
+++ b/admin/config.yml
@@ -5,7 +5,7 @@ backend:
   repo: WineBarProstejov/content
   branch: main
   auth_scope: repo
-  base_url: https://37d64c12.content-87t.pages.dev
+  base_url: https://content-87t.pages.dev
   auth_endpoint: api/auth
   
 media_folder: "public/uploads"
